jssrc2cpg: use git-lfs for astgen binaries

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          lfs: true
           fetch-depth: 0
       - uses: olafurpg/setup-scala@v10
         with:
