--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          lfs: true
           fetch-depth: 1
       - name: Set up JDK 1.11
         uses: actions/setup-java@v1
@@ -36,6 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          lfs: true
           fetch-depth: 1
       - name: Set up JDK 1.11
         uses: actions/setup-java@v1
