--- a/.github/workflows/upgrade-deps.yml
+++ b/.github/workflows/upgrade-deps.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          lfs: true
           fetch-depth: 1
       - name: Set up JDK 1.11
         uses: actions/setup-java@v1
