--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,5 @@ joern-cli/workspace
 **/astgen-win.exe
 **/astgen-macos
 **/astgen-linux
-**/php2cpg/vendor/
-**/php2cpg/composer*
+**/php2cpg/bin/vendor/
+**/php2cpg/bin/composer*
