--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,7 +28,7 @@ jobs:
           java-version: 1.11
       - name: Check formatting
         run: sbt ++2.13.8 scalafmtCheck test:scalafmtCheck
-      - run: echo "Previous step failed because code is not formatted. Run 'sbt scalafmt'"
+      - run: echo "Previous step failed because code is not formatted. Run 'sbt scalafmt Test/scalafmt'"
         if: ${{ failure() }}
   test-scripts:
     runs-on: ubuntu-20.04
