--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           fetch-depth: 1
       - name: Set up JDK 1.11
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
