--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: coursier/cache-action@v6
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
