--- a/.github/workflows/upgrade-deps.yml
+++ b/.github/workflows/upgrade-deps.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
+      - uses: coursier/cache-action@v6
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
