--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-12]
+#        os: [ubuntu-22.04, windows-2022, macos-12]
+        os: [windows-2022]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -17,7 +18,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Compile and run tests
-        run: sbt clean +test
+#        run: sbt clean +test
+        run: sbt "test:testOnly *jssrc2cpg*"
   formatting:
     runs-on: ubuntu-22.04
     steps:
