--- a/ci/Dockerfile.alma8
+++ b/ci/Dockerfile.alma8
@@ -12,6 +12,9 @@ LABEL maintainer="joern" \
       org.opencontainers.docker.cmd="docker run --rm -it -v /tmp:/tmp -v $(pwd):/app:rw -w /app -t ghcr.io/joernio/joern-alma8"
 
 ENV JOERN_HOME=/usr/local/bin \
+    LC_ALL=en_US.UTF-8 \
+    LANG=en_US.UTF-8 \
+    LANGUAGE=en_US.UTF-8 \
     JAVA_HOME="/etc/alternatives/jre_17" \
     JAVA_17_HOME="/etc/alternatives/jre_17" \
     JOERN_DATAFLOW_TRACKED_WIDTH=128 \
@@ -21,7 +24,7 @@ ENV JOERN_HOME=/usr/local/bin \
 COPY . /usr/local/src/
 
 RUN microdnf install -y gcc git-core php php-cli python3 python3-devel pcre2 which tar zip unzip sudo \
-        java-17-openjdk-headless ncurses jq zlib graphviz \
+        java-17-openjdk-headless ncurses jq zlib graphviz glibc-common glibc-all-langpacks \
     && curl -LO https://github.com/joernio/joern/releases/latest/download/joern-install.sh \
     && chmod +x ./joern-install.sh \
     && ./joern-install.sh \
