--- a/ci/Dockerfile.alma
+++ b/ci/Dockerfile.alma
@@ -9,7 +9,7 @@ LABEL maintainer="joern" \
       org.opencontainers.image.licenses="Apache-2.0" \
       org.opencontainers.image.title="joern" \
       org.opencontainers.image.description="Joern is a platform for analyzing source code, bytecode, and binary executables" \
-      org.opencontainers.docker.cmd="docker run --rm -it -v /tmp:/tmp -v $(pwd):/app:rw -w /app -t ghcr.io/joernio/joern"
+      org.opencontainers.docker.cmd="docker run --rm -it -v /tmp:/tmp -v $(pwd):/app:rw -w /app -t ghcr.io/joernio/joern joern"
 
 ENV JOERN_HOME=/usr/local/bin \
     LC_ALL=en_US.UTF-8 \
@@ -36,4 +36,4 @@ RUN microdnf install -y gcc git-core php php-cli python3 python3-devel pcre2 whi
 
 WORKDIR /app
 
-ENTRYPOINT [ "joern" ]
+CMD [ "joern" ]
