container build: trigger by release

--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -1,9 +1,8 @@
 name: Upload Container image
 
 on:
-  push:
-    tags:
-      - '**'
+  release:
+    types: [published]
 
 env:
   REGISTRY: ghcr.io
