gh actions: run release and container deploy job only on joernio org

--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   deploy:
-
+    if: github.repository_owner == 'joernio'
     runs-on: ubuntu-latest
     permissions:
       contents: write
