Try without provenance
Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -12,6 +12,7 @@ jobs:
   deploy:
     if: github.repository_owner == 'joernio'
     runs-on: ubuntu-latest
+    continue-on-error: true
     permissions:
       contents: write
       packages: write
@@ -46,8 +47,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=joern
           cache-to: type=gha,mode=max,scope=joern
-          provenance: true
-          sbom: true
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta3
@@ -67,8 +66,6 @@ jobs:
           labels: ${{ steps.meta3.outputs.labels }}
           cache-from: type=gha,scope=joern-slim
           cache-to: type=gha,mode=max,scope=joern-slim
-          provenance: true
-          sbom: true
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta2
@@ -88,5 +85,3 @@ jobs:
           labels: ${{ steps.meta2.outputs.labels }}
           cache-from: type=gha,scope=joern-alma8
           cache-to: type=gha,mode=max,scope=joern-alma8
-          provenance: true
-          sbom: true
