Download goastgen binaries
1. Download goastgen binaries as part of build

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ null
 /woo.c
 /cpg_*.bin.zip
 .DS_Store
+**/goastgen-windows.exe
+**/goastgen-linux
+**/goastgen-linux-arm64
+**/goastgen-macos
+**/goastgen-macos-arm64
