rubysrc2cpg: Added External Dependency Download Support (#2816)
Added Support to resolve the `methodFullName` when external dependency present in ruby file. 

Created one passes:
1. `AstPackagePass`: This pass collect all external dependency files ending with `.rb` extension. Parsing and storing its method info into `packageTable`. 

Added `enableDependencyDownload` flag, If provided, then only gem dependencies will be downloaded. Note, this is troublesome to get working on Windows due to some permissions issue so, for now, this is only available on MacOS and Linux.

Here `packageTable` is like cache for storing the method and require info. Furthermore, we only search for the method name in the module mentioned in the file.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,6 +16,12 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '19'
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7
+      - name: Install Bundler
+        run: gem install bundler
       - name: Compile and run tests
         run: sbt clean +test
   formatting:
