--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '19'
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7
+      - name: Install Bundler
+        run: gem install bundler
       - run: sbt scalafmtCheck +test
       - run: ./testDistro.sh
       - run: |
